# icons-cli

./: Cargo.toml  README.md
src/: icon.rs  main.rs
src/helpers/: icns.json
