[package]
name = "icons-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = [ "derive" ] }
icns = { package = "tauri-icns", version = "0.1" }
image = { version = "0.24", default-features = false, features = [ "ico" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
css-color = "0.2"
log = { version = "0.4.17", features = [ "kv_unstable", "kv_unstable_std" ] }
structopt = { version = "0.3", default-features = false }
env_logger = "0.10.0"
